<resources>
    <string name="app_name" translatable="false">Forecast MVVM</string>
    <string name="settings">Settings</string>
    <string name="feels_like">Feels like: </string>
    <string name="precipitation">Precipitation: </string>
    <string name="wind">Wind: </string>
    <string name="visibility">Visibility: </string>
    <string name="humidity">Humidity: </string>
    <string name="uv_index">UV Index: </string>
    <string name="set_location_manually">Please, set location manually in settings!</string>
    <string name="allow_app_location">Allow the app to get your location</string>
    <string name="use_device_location">Use device location</string>
    <string name="weather_location">Weather Location</string>
    <string name="location">Location</string>
    <string name="location_summary">The location for which the weather is displayed</string>
    <string name="units">Units</string>
    <string name="unit_system">Unit System</string>
</resources>
