<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/weather_location">
        <SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="USE_DEVICE_LOCATION"
            android:summary="@string/allow_app_location"
            android:title="@string/use_device_location" />

        <EditTextPreference
            android:defaultValue="Wroclaw"
            android:dependency="USE_DEVICE_LOCATION"
            android:key="CUSTOM_LOCATION"
            android:summary="@string/location_summary"
            android:title="@string/location" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/units">
        <ListPreference
            android:entries="@array/unitSystemEntries"
            android:entryValues="@array/unitSystemValues"
            android:key="UNIT_SYSTEM"
            android:summary="%s"
            android:title="@string/unit_system"
            app:defaultValue="METRIC"/>
    </PreferenceCategory>


</PreferenceScreen>